--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ subprojects { subproject ->
 	apply plugin: 'eclipse'
 	apply plugin: 'idea'
 	apply plugin: 'maven'
+	apply plugin:'application'
 
 	ext {
 		junitVersion = '4.8.2'
@@ -134,6 +135,7 @@ project('yaya') {
 
 project('yaya-demo') {
 	description = 'Demo of YARN API'
+	mainClassName="yarn.demo.ClusterDemo"
 	dependencies {
 		compile project(":yaya")
 		//compile project(":yarn-test-cluster")
