--- a/yaya-demo/src/main/resources/log4j.properties
+++ b/yaya-demo/src/main/resources/log4j.properties
@@ -4,5 +4,5 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %t %c{2}:%L - %m%n
 
-log4j.category.oz.hadoop=DEBUG
+log4j.category.oz.hadoop=INFO
 	
