ENH #19 Added utilities to simplify in-cluster demo and testing Added ConfigUtils and MiniClusterUtils Added ability to build and start MiniCluster from anothre project without adding it to the classpath of that project

--- a/build.gradle
+++ b/build.gradle
@@ -146,6 +146,7 @@ project('yaya-demo') {
 
 project('yarn-test-cluster') {
 	description = 'Local YARN cluster'
+	mainClassName="oz.hadoop.yarn.test.cluster.StartMiniCluster"
 	dependencies {
 	    compile "org.apache.hadoop:hadoop-yarn-client:$hadoopVersion"
 	    compile "org.apache.hadoop:hadoop-common:$hadoopVersion"
